# webcamtest

./: Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.in  webcamtest.cpp
.deps/: webcamtest.Po
autom4te.cache/: output.0  requests  traces.0
