#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([webcamtest.cpp])
AM_INIT_AUTOMAKE(webcamtest,1.0)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
PKG_CHECK_MODULES(webcamtest,libusb-1.0)
PKG_CHECK_MODULES(webcamtest,SDL2)

AC_OUTPUT(Makefile)
